--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,11 @@
 name: Basic React App Deploy to Surge
 
 # Controls when the action will run. Triggers the workflow on push or pull request
+# This is a basic workflow to help you get started with Actions
+
+name: Basic React App Deploy to Surge
+
+# Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
@@ -38,4 +43,5 @@ jobs:
       run: npm install --global surge
 
     - name: Deploy to Surge
-      run: surge ./build quizappbymuneeb.surge.sh --token ${{ secrets.Surge_token }}
+      run: surge ./build redqueenanimationbymuneeb.surge.sh --token ${{ secrets.Surge_token }}
+
